// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FancyHr> should match the snapshot 1`] = `
<DocumentFragment>
  <hr
    class="fancy-hr border-red-500"
  />
</DocumentFragment>
`;

exports[`<FancyHr> with className: value should append the className 1`] = `
<DocumentFragment>
  <hr
    class="fancy-hr border-red-500 some-class-name"
  />
</DocumentFragment>
`;

exports[`<FancyHr> with style: value should match the snapshot 1`] = `
<DocumentFragment>
  <hr
    class="fancy-hr border-green-500"
  />
</DocumentFragment>
`;
